--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
+  flutter_inappwebview: ^5.3.2
 
 dev_dependencies:
   flutter_test:
@@ -18,3 +17,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
