--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_hybrid_template
-description: A new Flutter project.
+description: A hybrid Flutter app.
 publish_to: "none"
 version: 1.0.0+1
 
