--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           flutter config --enable-web
           flutter pub get
       - name: Build
-        run: cd example && flutter build web
+        run: flutter build web
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
