--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,10 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v1
         with:
-          channel: 'dev'
+          channel: 'stable'
 
       - name: Install
-        run: |
-          flutter config --enable-web
-          flutter pub get
+        run: flutter pub get
       - name: Build
         run: flutter build web
 
@@ -27,4 +25,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./example/build/web
+          publish_dir: ./build/web
