--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v1
+      - uses: actions/setup-node@v2
         with:
-          channel: 'stable'
-
-      - name: Install
-        run: flutter pub get
-      - name: Build
-        run: flutter build web
+          node-version: '14'
+      - run: npm install
+      - run: npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
